--- a/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
+++ b/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
@@ -6,15 +6,14 @@
              x:Class="Diagnosis.App.Controls.Editors.ComboBoxDatePicker"
              mc:Ignorable="d"             
              d:DesignWidth="300"
-             x:Name="root"
-             Height="23">
+             x:Name="root">
     <UserControl.Resources>
         <Converters:MonthToString x:Key="MonthToString" />
         <Converters:IntToString x:Key="IntToString" />
     </UserControl.Resources>
     <StackPanel Orientation="Horizontal">
         <StackPanel.Resources>
-            <Style x:Key="comboRight" TargetType="{x:Type ComboBox}">
+            <Style x:Key="comboRight" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource {x:Type ComboBox}}" >
                 <Setter Property="Margin" Value="0,0,5,0" />
             </Style>
         </StackPanel.Resources>
