--- a/Diagnosis.App/Controls/Editors/HealthRecordEditor.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditor.xaml
@@ -8,17 +8,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
     <UserControl.Resources>
-        <Style TargetType="DockPanel">
-            <Setter Property="Margin">
-                <Setter.Value>
-                    <Thickness Bottom="10"></Thickness>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="Height" Value="23" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-        </Style>
+        <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
         <Style TargetType="Label" BasedOn="{StaticResource label90}" />
     </UserControl.Resources>
     <StackPanel>
@@ -33,11 +23,15 @@
         </DockPanel>
         <DockPanel>
             <Label Content="дата" />
-            <editors:ComboBoxDatePicker Year="{Binding FromYear, Mode=TwoWay}"
-                                         Month="{Binding FromMonth, Mode=TwoWay}"
-                                         Day="{Binding FromDay, Mode=TwoWay}" />
+            <editors:ComboBoxDatePicker Year="{Binding FromYear, Mode=TwoWay}" 
+                                        Month="{Binding FromMonth, Mode=TwoWay}"
+                                        Day="{Binding FromDay, Mode=TwoWay}" />
             <Label Content="давность" Margin="10,0,0,0" Width="60" />
-            <editors:DateOffsetPicker DateOffset="{Binding DateOffset}" />
+            <editors:DateOffsetPicker DateOffset="{Binding DateOffset}">
+                <editors:DateOffsetPicker.Resources>
+                    <Style TargetType="DockPanel" />
+                </editors:DateOffsetPicker.Resources>
+            </editors:DateOffsetPicker>
         </DockPanel>
         <DockPanel>
             <Label Content="число" />
