--- a/Diagnosis.App/Controls/Editors/PatientEditor.xaml
+++ b/Diagnosis.App/Controls/Editors/PatientEditor.xaml
@@ -7,20 +7,8 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
     <UserControl.Resources>
-        <Style TargetType="DockPanel">
-            <Setter Property="Margin">
-                <Setter.Value>
-                    <Thickness Bottom="10"></Thickness>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="Height" Value="23" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-        </Style>
-        <Style TargetType="Label" BasedOn="{StaticResource label120}">
-            <Setter Property="VerticalAlignment" Value="Top" />
-        </Style>
+        <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
+        <Style TargetType="Label" BasedOn="{StaticResource label120}" />
     </UserControl.Resources>
     <StackPanel>
         <DockPanel>
