--- a/Diagnosis.App/Screens/Login.xaml
+++ b/Diagnosis.App/Screens/Login.xaml
@@ -6,11 +6,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300" Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}">
     <UserControl.Resources>
-        <Style TargetType="Label" BasedOn="{StaticResource label120}">
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="Width" Value="100" />
-        </Style>
+        <Style TargetType="Label" BasedOn="{StaticResource label90}" />
 
         <Style TargetType="DockPanel">
             <Setter Property="Margin" Value="0,0,0,10" />
@@ -18,7 +14,7 @@
     </UserControl.Resources>
     <Grid>        
         <StackPanel MaxWidth="300">
-            <TextBlock Style="{StaticResource ScreenTitle}">Вход</TextBlock>
+            <TextBlock Style="{StaticResource ScreenTitle}" Padding="5,0,0,0">Вход</TextBlock>
             <DockPanel>
                 <Label>Доктор:</Label>
                 <ComboBox x:Name="doctors"
@@ -37,6 +33,7 @@
                 <Label>Пароль:</Label>
                 <Border DataContext="{Binding IsWrongPassword}">
                     <PasswordBox x:Name="password"
+                                 VerticalContentAlignment="Center"
                                  PasswordChanged="password_PasswordChanged"/>
                 </Border>
             </DockPanel>
