--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -112,14 +112,13 @@
                             <Grid VerticalAlignment="Center" Visibility="{Binding NoCourses, Converter={StaticResource NegBooleanToVisibilityConverter}}" Margin="0,0,0,5">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="150" />
+                                    <ColumnDefinition MinWidth="120" MaxWidth="250"/>
                                 </Grid.ColumnDefinitions>
 
-                                <TextBlock Text="Курс"
+                                <TextBlock Text="Курс" Margin="0,0,10,0"
                                        VerticalAlignment="Center" />
 
                                 <ComboBox ItemsSource="{Binding CoursesManager.Courses}"
-                                      Margin="10,0,10,0"
         			                  SelectedItem="{Binding CoursesManager.SelectedCourse}"
                                       Grid.Column="1">
                                     <ComboBox.ItemTemplate>
@@ -131,17 +130,12 @@
                             </Grid>
                             <Button Command="{Binding CurrentDoctor.StartCourseCommand}"
                                     Height="26"
-                                    Margin="0,0,0,5"
+                                    Margin="10,0,0,5"
                                     VerticalAlignment="Center"
         			                CommandParameter="{Binding}"
                                     Content="Начать курс" />
                         </controls:AlignableWrapPanel>
                     </Grid>
-
-                    <!--<card:AppointmentsList DataContext="{Binding CoursesManager.SelectedCourse}"
-        				                   DockPanel.Dock="Top"
-        				                   Margin="10,10,10,0"
-                                           Visibility="{Binding DataContext.NoCourses, ElementName=root, Converter={StaticResource NegBooleanToVisibilityConverter}}" />-->
 
                     <card:AppointmentsTabs DataContext="{Binding CoursesManager.SelectedCourse}"
         				                   DockPanel.Dock="Top"
