--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -52,7 +52,7 @@
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Text="{Binding Label}" />
-                        <TextBlock Text="{Binding Self, Converter={StaticResource ManToShortName}}" Grid.Column="1" />
+                        <TextBlock Text="{Binding Converter={StaticResource ManToShortName}}" Grid.Column="1" />
                         <TextBlock x:Name="unsaved"
                                    Grid.Column="1"
                                    HorizontalAlignment="Right"
