--- a/Diagnosis.App/Controls/Card/AppointmentsTabs.xaml
+++ b/Diagnosis.App/Controls/Card/AppointmentsTabs.xaml
@@ -21,9 +21,12 @@
                             Command="{Binding Content.Editable.DeleteCommand}"
                             Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"
                             Height="12"
-                            Content="×"
+                            Padding="0"
                             ToolTip="Удалить осмотр"
                             DockPanel.Dock="Right">
+                        <Button.Background>
+                            <ImageBrush ImageSource="{StaticResource closeImage}" Stretch="Uniform"/>
+                        </Button.Background>
                         <Button.Style>
                             <Style TargetType="Button">
                                 <Setter Property="Visibility" Value="Collapsed" />
