--- a/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
+++ b/Diagnosis.App/Controls/Editors/CategoryChooser.xaml
@@ -16,7 +16,7 @@
 
             <Controls:RadioListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid />
+                    <UniformGrid Rows="2" Columns="3" />
                 </ItemsPanelTemplate>
             </Controls:RadioListBox.ItemsPanel>
             <Controls:RadioListBox.ItemTemplate>
