--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -114,7 +114,7 @@
             <StackPanel Margin="5,10,5,0">
                 <controls:AutoComplete DataContext="{Binding WordSearch}" />
                 <DockPanel Style="{StaticResource line}">
-                    <StackPanel DockPanel.Dock="Top"
+                    <!--<StackPanel DockPanel.Dock="Top"
                         Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
                         <TextBlock Style="{StaticResource lineHeader}">Слова:</TextBlock>
                         <ListView ItemsSource="{Binding Words}">
@@ -124,7 +124,7 @@
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
-                    </StackPanel>
+                    </StackPanel>-->
                     <CheckBox IsChecked="{Binding AnyWord}" Margin="0,10,0,0">Хотя бы одно слово</CheckBox>
                 </DockPanel>
                 <DockPanel Style="{StaticResource line}">
