--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -34,6 +34,9 @@
             <DataTemplate DataType="{x:Type vm:SearchViewModel}">
                 <screen:Search />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:PatientsManager}">
+                <screen:Patients />
+            </DataTemplate>            
         </ResourceDictionary>
     </Window.Resources>
 
@@ -55,13 +58,15 @@
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
             </Grid.Background>
             <Menu>
-                <MenuItem Header="_Справочники">
-                    <MenuItem Header="_Симптомы" Command="{Binding EditSymptomsDirectoryCommand}" />
-                    <MenuItem Header="Диагнозы" Command="{Binding EditDiagnosisDirectoryCommand}" />
+                <MenuItem Header="_Пациенты">
+                    <MenuItem Command="{Binding OpenPatientsCommand}" Header="_Все" />
+                    <MenuItem Command="{Binding AddPatientCommand}" Header="_Создать..."  />
                 </MenuItem>
-                <MenuItem Header="_Поиск">
-                    <MenuItem IsCheckable="true" IsChecked="{Binding SearchTesterOpened}" Header="_Все поиски" />
-                    <MenuItem IsCheckable="true" IsChecked="{Binding IsSearchVisible}" Header="_Поиск" />
+                <MenuItem Header="_Вид">
+                    <MenuItem Header="_Слова" Command="{Binding OpenWordsCommand}" />
+                    <!--<MenuItem IsCheckable="true" IsChecked="{Binding SearchTesterOpened}" Header="_Все поиски" />-->
+                    <MenuItem IsCheckable="true" IsChecked="{Binding SearchAsideVisible}" Header="_Поиск" />
+                    <MenuItem IsCheckable="true" IsChecked="{Binding PatientsAsideVisible}" Header="_Пациенты" />
                 </MenuItem>
             </Menu>
             <Menu HorizontalAlignment="Center">
@@ -88,16 +93,16 @@
                     <Style TargetType="TabControl">
                         <Setter Property="BorderThickness" Value="1,0,1,0"/>
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding NoTabVisible}" Value="True">
+                            <DataTrigger Binding="{Binding NoAsideVisible}" Value="True">
                                 <Setter Property="BorderThickness" Value="0,0,1,0"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </TabControl.Style>
-                <TabItem IsSelected="{Binding IsPatientsVisible}"
+                <TabItem IsSelected="{Binding PatientsAsideVisible}"
                          Style="{StaticResource tabHeaderWithLine}">
                     <TabItem.Header>
-                        <ToggleButton IsChecked="{Binding IsPatientsVisible}" Style="{StaticResource emptyToggle}">
+                        <ToggleButton IsChecked="{Binding PatientsAsideVisible}" Style="{StaticResource emptyToggle}">
                             <TextBlock Style="{StaticResource verticalTextBlock}">Пациенты</TextBlock>
                         </ToggleButton>
                     </TabItem.Header>
@@ -105,10 +110,10 @@
         			                 DataContext="{Binding Patients}"
         			                 Margin="5,0,5,0" />
                 </TabItem>
-                <TabItem IsSelected="{Binding IsSearchVisible}"
+                <TabItem IsSelected="{Binding SearchAsideVisible}"
                          Style="{StaticResource tabHeaderWithLine}">
                     <TabItem.Header>
-                        <ToggleButton IsChecked="{Binding IsSearchVisible}" Style="{StaticResource emptyToggle}">
+                        <ToggleButton IsChecked="{Binding SearchAsideVisible}" Style="{StaticResource emptyToggle}">
                             <TextBlock Style="{StaticResource verticalTextBlock}">Поиск</TextBlock>
                         </ToggleButton>
                     </TabItem.Header>
